# libsrypto

./: .gitignore  CMakeLists.txt  crypt.c  crypt.h  key.c  keypair.c  keypair.h  srypto.h
interface/: io.c  io.h  main.c  rng.c  rng.h
pysdes/: pysdes.c
src/: crypt.c  crypt.h  key.c  key.h  keypair.c  srypto.h
tests/: base_test.c
